--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <center>
     <ul class="menu">
         <li class="link"><a href="#welcome">About</a></li>
         <li class="link"><a href="#players">My favourite players</a></li>
@@ -79,6 +80,7 @@
 
 
     </section>
+    </center>
 
 
 
